// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with custom text 1`] = `
<h1
  className="title-bold text-color-light"
  style={
    Object {
      "fontWeight": "700",
    }
  }
>
  Hello World!
</h1>
`;

exports[`renders correctly with default text 1`] = `
<h1
  className="title-bold "
  style={
    Object {
      "fontWeight": undefined,
    }
  }
>
  Hello World!
</h1>
`;
